@@ -131,6 +131,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionBasedInstaller.cs" />
     <Compile Include="ClassComponents\IDoubleGeneric.cs" />
     <Compile Include="ClassComponents\UsesSimpleComponent1.cs" />
     <Compile Include="Configuration2\ConfigurationInstallersTestCase.cs" />
@@ -138,6 +139,8 @@
     <Compile Include="CustomActivatorTestCase.cs" />
     <Compile Include="Facilities\EventWiring\FluentRegistrationTestCase.cs" />
     <Compile Include="Facilities\EventWiring\Model\ListenerWithOnEventMethod.cs" />
+    <Compile Include="Facilities\Startable\OptimizedForSingleInstallTestCase.cs" />
+    <Compile Include="Facilities\Startable\Components\Startable.cs" />
     <Compile Include="Facilities\TypedFactory\Delegates\Bar.cs" />
     <Compile Include="Facilities\TypedFactory\Delegates\Baz.cs" />
     <Compile Include="Facilities\TypedFactory\Delegates\Foo.cs" />
